--- a/src/app/pages/favorites/favorites.page.html
+++ b/src/app/pages/favorites/favorites.page.html
@@ -1,24 +1,31 @@
-<ion-header>
-  <ion-toolbar color="primary">
+<ion-header [translucent]="true">
+  <ion-toolbar>
     <ion-title>Favorites</ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="toggleEditMode()">
-        {{ editMode ? 'Done' : 'Edit' }}
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-  <ion-toolbar color="primary">
-    <ion-searchbar (ionChange)="handleSearchChange($event)" placeholder="Search"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Favorites</ion-title>
+      <ion-buttons slot="end">
+        <ion-button (click)="toggleEditMode()">
+          {{ editMode ? 'Done' : 'Edit' }}
+        </ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+    <ion-toolbar>
+      <ion-searchbar (ionChange)="handleSearchChange($event)" placeholder="Search"></ion-searchbar>
+    </ion-toolbar>
+  </ion-header>
   <ng-container *ngIf="filteredFavorites.length; else emptyList">
-    <ion-list #myList>
+    <ion-list #myList [inset]="true">
       <ion-item-sliding *ngFor="let fav of filteredFavorites">
-        <ion-item>
+        <ion-item color="light">
           <ion-label [routerLink]="['/tabs/favorites', fav.id]">
-            <ion-text color="primary">{{ fav.name }}</ion-text>
+            <ion-text>
+              <h2><strong>{{ fav.name }}</strong></h2>
+            </ion-text>
             <p class="hymn-count">{{ fav.hymnIds.length }} hymn(s)</p>
           </ion-label>
           <ion-badge slot="end">{{ fav.id | date }}</ion-badge>
