--- a/src/app/pages/favourite-hymn-detail/favourite-hymn-detail.page.html
+++ b/src/app/pages/favourite-hymn-detail/favourite-hymn-detail.page.html
@@ -5,13 +5,8 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button (click)="openFeedbackModal()">
-        <ion-icon slot="icon-only" name="chatbox-ellipses"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-buttons slot="end">
-      <ion-button (click)="addToFavorites()">
-        <ion-icon name="heart-outline"></ion-icon>
+      <ion-button (click)="presentPopover($event)">
+        <ion-icon slot="icon-only" name="ellipsis-vertical-circle-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
