--- a/src/app/tabnav/tabnav.page.html
+++ b/src/app/tabnav/tabnav.page.html
@@ -2,16 +2,16 @@
   <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="hymns">
-        <ion-icon name="home-outline"></ion-icon>
-        <ion-label>Home</ion-label>
+        <ion-icon name="book-outline"></ion-icon>
+        <ion-label>Hymns</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="favorites">
-        <ion-icon name="heart-outline"></ion-icon>
+        <ion-icon name="bookmarks-outline"></ion-icon>
         <ion-label>Favorites</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="info">
-        <ion-icon name="information-circle"></ion-icon>
-        <ion-label>Info</ion-label>
+        <ion-icon name="settings-outline"></ion-icon>
+        <ion-label>Settings</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
