changed the modal location

--- a/src/app/pages/favourite-modal/favourite-modal.page.html
+++ b/src/app/pages/favourite-modal/favourite-modal.page.html
@@ -3,7 +3,7 @@
     <ion-title>
       Add to Favorites
     </ion-title>
-    <ion-buttons slot="start">
+    <ion-buttons slot="end">
       <ion-button (click)="dismiss()">
         <ion-icon slot="icon-only" name="close"></ion-icon>
       </ion-button>
