project build and few adjustments

--- a/src/app/components/hymn-options/hymn-options.component.html
+++ b/src/app/components/hymn-options/hymn-options.component.html
@@ -1,14 +1,14 @@
 <ion-list>
-  <ion-item button (click)="openFeedbackModal()">
-    <ion-icon slot="start" name="chatbox-outline"></ion-icon>
-    <ion-label>Feedback</ion-label>
+  <ion-item (click)="openFeedbackModal()">
+    <ion-icon slot="end" name="chatbox-outline"></ion-icon>
+    <ion-text> Feedback</ion-text>
   </ion-item>
-  <ion-item button (click)="addToFavorites()">
-    <ion-icon slot="start" name="heart-outline"></ion-icon>
-    <ion-label>Favorite</ion-label>
+  <ion-item (click)="addToFavorites()">
+    <ion-icon slot="end" name="heart-outline"></ion-icon>
+    <ion-text>Favorite</ion-text>
   </ion-item>
-  <ion-item button (click)="shareHymn()">
-    <ion-icon slot="start" name="share"></ion-icon>
-    <ion-label>Share</ion-label>
+  <ion-item (click)="shareHymn()">
+    <ion-icon slot="end" name="share"></ion-icon>
+    <ion-text>Share Hymn</ion-text>
   </ion-item>
 </ion-list>
