--- a/src/app/pages/hymn-list/hymn-list.page.scss
+++ b/src/app/pages/hymn-list/hymn-list.page.scss
@@ -10,7 +10,8 @@ ion-spinner {
   margin: 0 auto;
   margin-bottom: 8px;
 }
-// ion-searchbar {
-//   background-color: var(--ion-color-tertiary);
-//   color: var(--ion-color-light);
-// }
+.heading-title {
+  font-weight: bold;
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
