--- a/src/app/pages/info/info.page.html
+++ b/src/app/pages/info/info.page.html
@@ -31,7 +31,7 @@
         </ion-text>
       </ion-label>
     </ion-item>
-    <ion-item color="light" button href="https://seblaise.dev">
+    <ion-item color="light" button href="http://sda-kinyarwanda-hymnal.surge.sh">
       <ion-icon slot="start" name="globe-outline"></ion-icon>
       <ion-label>
         <ion-text>
@@ -51,7 +51,7 @@
       </ion-label>
     </ion-item>
 
-    <ion-item color="light" button>
+    <ion-item color="light" button (click)="rateApp()">
       <ion-icon slot="start" name="star"></ion-icon>
       <ion-label>
         <ion-text>
