--- a/src/app/pages/favorites/favorites.page.html
+++ b/src/app/pages/favorites/favorites.page.html
@@ -44,7 +44,7 @@
   <ng-template #emptyList>
     <ion-item>
       <ion-text color="medium" class="ion-text-center">
-        No favorites found.
+        No favourites list available
       </ion-text>
     </ion-item>
   </ng-template>
