--- a/src/app/pages/favourite-modal/favourite-modal.page.html
+++ b/src/app/pages/favourite-modal/favourite-modal.page.html
@@ -26,7 +26,7 @@
 
   <ion-list [inset]="true">
     <ion-item color="light">
-      <ion-label position="stacked">New Favorite Name</ion-label>
+      <ion-label position="stacked">New Favorite List Name</ion-label>
       <ion-input type="text" [(ngModel)]="newFavoriteName"></ion-input>
     </ion-item>
   </ion-list>
