--- a/src/app/pages/feedback-modal/feedback-modal.page.html
+++ b/src/app/pages/feedback-modal/feedback-modal.page.html
@@ -11,7 +11,7 @@
 
 <ion-content>
   <form [formGroup]="feedbackForm" (ngSubmit)="submitForm()" class="ion-padding">
-    <ion-list lines="none" [inset]="true">
+    <ion-list [inset]="true">
       <ion-item>
         <ion-label position="stacked">
           <ion-text color="primary">
