--- a/src/app/pages/info/info.page.html
+++ b/src/app/pages/info/info.page.html
@@ -103,8 +103,7 @@
           </ion-text>
           <ion-text><b>SDA Kinyarwanda Hymnal app</b> - created with passion by <b>Blaise Sebagabo</b> , a solo software
             developer
-            based in
-            Edmonton, Canada. If you find this app helpful, please leave a review and share it with your friends and
+            based in Canada. If you find this app helpful, please leave a review and share it with your friends and
             family. Thank you for your support!</ion-text>
         </ion-col>
       </ion-row>
