Home UI Refactor

--- a/src/app/components/recently-viewed-list/recently-viewed-list.component.html
+++ b/src/app/components/recently-viewed-list/recently-viewed-list.component.html
@@ -1,6 +1,7 @@
 <ion-item *ngIf="this.recentlyViewedHymns.length>0">
   <ion-label>
     <h2 class="heading-title">
+      <ion-icon name="time-outline" color="primary"></ion-icon>
       Recently Viewed
     </h2>
   </ion-label>
