--- a/src/app/pages/hymn-detail/hymn-detail.page.scss
+++ b/src/app/pages/hymn-detail/hymn-detail.page.scss
@@ -5,3 +5,30 @@
   border: 1px solid #e0e0e0; /* change to the color you prefer */
   border-radius: 5px;
 }
+
+.hymn-details {
+  padding: 16px;
+}
+
+.hymn-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+
+.verse-container {
+  background-color: #f5f5f5;
+  padding: 16px;
+  border-radius: 8px;
+}
+
+.verse {
+  margin-bottom: 8px;
+  line-height: 1.5;
+}
+.hymn-details {
+  -webkit-user-select: text;  /* Safari */
+  -moz-user-select: text;     /* Firefox */
+  -ms-user-select: text;      /* IE 10+ */
+  user-select: text;          /* Standard syntax */
+}
