Added new fab button and Dark mode fix on details

--- a/src/app/components/hymn-options/hymn-options.component.html
+++ b/src/app/components/hymn-options/hymn-options.component.html
@@ -3,10 +3,10 @@
     <ion-icon slot="end" name="chatbox-outline"></ion-icon>
     <ion-text> Feedback</ion-text>
   </ion-item>
-  <ion-item (click)="addToFavorites()">
+  <!-- <ion-item (click)="addToFavorites()">
     <ion-icon slot="end" name="heart-outline"></ion-icon>
     <ion-text>Favorite</ion-text>
-  </ion-item>
+  </ion-item> -->
   <ion-item (click)="shareHymn()">
     <ion-icon slot="end" name="share"></ion-icon>
     <ion-text>Share Hymn</ion-text>
