--- a/src/app/pages/favourite-hymn-detail/favourite-hymn-detail.page.html
+++ b/src/app/pages/favourite-hymn-detail/favourite-hymn-detail.page.html
@@ -30,4 +30,9 @@
       </div>
     </ion-text>
   </ion-item>
+  <ion-fab  slot="fixed" vertical="bottom" horizontal="center" (click)="openAddToFavoriteModal()">
+    <ion-fab-button>
+      <ion-icon name="heart-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
