--- a/src/app/tabnav/tabnav.page.html
+++ b/src/app/tabnav/tabnav.page.html
@@ -6,7 +6,7 @@
         <ion-label>Hymns</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="favorites">
-        <ion-icon name="bookmarks-outline"></ion-icon>
+        <ion-icon name="heart-outline"></ion-icon>
         <ion-label>Favorites</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="info">
