--- a/src/app/components/hymn-options-sheet/hymn-options-sheet.component.html
+++ b/src/app/components/hymn-options-sheet/hymn-options-sheet.component.html
@@ -15,10 +15,10 @@
       <ion-icon slot="start" name="share-outline"></ion-icon>
       <ion-label>Share</ion-label>
     </ion-item>
-    <ion-item (click)="addToFavorites()">
+    <!-- <ion-item (click)="addToFavorites()">
       <ion-icon slot="start" name="heart-outline"></ion-icon>
       <ion-label>Add to Favorites</ion-label>
-    </ion-item>
+    </ion-item> -->
     <ion-item (click)="openFeedbackModal()">
       <ion-icon slot="start" name="chatbox-outline"></ion-icon>
       <ion-label>Send Feedback</ion-label>
