--- a/src/app/pages/favourite-hymn-detail/favourite-hymn-detail.page.scss
+++ b/src/app/pages/favourite-hymn-detail/favourite-hymn-detail.page.scss
@@ -9,10 +9,17 @@
   }
   
   .verse-container {
-    background-color: #f5f5f5;
+    background-color: var(--ion-color-light); /* Use --ion-color-light for light mode */
     padding: 16px;
     border-radius: 8px;
+    // color: #000; /* Set the text color to black */
   }
+  
+  .dark-mode .verse-container {
+    background-color: var(--ion-color-dark); /* Use --ion-color-dark for dark mode */
+    color: #fff; /* Set the text color to white */
+  }
+  
   
   .verse {
     margin-bottom: 8px;
