--- a/src/app/pages/info/info.page.html
+++ b/src/app/pages/info/info.page.html
@@ -22,24 +22,6 @@
       <ion-toggle name="darkMode" (ionChange)="toggleDarkMode($event)"></ion-toggle>
     </ion-item>
   </ion-list>
-  <!-- <ion-list [inset]="true">
-    <ion-item color="light" button href="https://github.com/blaiseAI/sda-kinyarwanda-hymnal">
-      <ion-icon slot="start" name="logo-github"></ion-icon>
-      <ion-label>
-        <ion-text>
-          <h2>GitHub Repository</h2>
-        </ion-text>
-      </ion-label>
-    </ion-item>
-    <ion-item color="light" button href="http://sda-kinyarwanda-hymnal.surge.sh">
-      <ion-icon slot="start" name="globe-outline"></ion-icon>
-      <ion-label>
-        <ion-text>
-          <h2>Website</h2>
-        </ion-text>
-      </ion-label>
-    </ion-item>
-  </ion-list> -->
   <ion-list [inset]="true">
     <ion-item color="light" button (click)="sendFeedback()">
       <ion-icon slot="start" name="chatbox-ellipses"></ion-icon>
@@ -51,7 +33,7 @@
       </ion-label>
     </ion-item>
 
-    <ion-item color="light" button (click)="rateApp()">
+    <ion-item *ngIf="isMobile && isIOS" color="light" button (click)="rateApp()">
       <ion-icon slot="start" name="star"></ion-icon>
       <ion-label>
         <ion-text>
