Added new View all Favorites Button

--- a/src/app/components/hymn-options/hymn-options.component.html
+++ b/src/app/components/hymn-options/hymn-options.component.html
@@ -1,7 +1,7 @@
 <ion-list>
   <ion-item (click)="openFeedbackModal()">
     <ion-icon slot="end" name="chatbox-outline"></ion-icon>
-    <ion-text> Feedback</ion-text>
+    <ion-text> Hymn Feedback</ion-text>
   </ion-item>
   <!-- <ion-item (click)="addToFavorites()">
     <ion-icon slot="end" name="heart-outline"></ion-icon>
