--- a/src/app/pages/favourite-modal/favourite-modal.page.html
+++ b/src/app/pages/favourite-modal/favourite-modal.page.html
@@ -33,4 +33,5 @@
 
   <ion-button expand="block" color="primary" [disabled]="!(favourites.length > 0 || newFavoriteName !== '')"
     (click)="addHymnToFavourite()">Add</ion-button>
+<ion-button expand="block" color="light" (click)="navigateToAllFavorites()">View All Favorites</ion-button>
 </ion-content>
