--- a/src/app/pages/info/info.page.html
+++ b/src/app/pages/info/info.page.html
@@ -72,6 +72,16 @@
         </ion-text>
       </ion-label>
     </ion-item>
+    <!-- <ion-item>
+      <ion-label>
+        <ion-text>
+          <h2>Version</h2>
+        </ion-text>
+        <p>
+          {{ appVersion }}
+        </p>
+      </ion-label>
+    </ion-item> -->
   </ion-list>
 
   <!--Developer Info Made with Love By Blaise-->
