Fixed some hymns and code refactoring

--- a/src/app/components/hymn-options/hymn-options.component.html
+++ b/src/app/components/hymn-options/hymn-options.component.html
@@ -1,6 +1,6 @@
 <ion-list>
   <ion-item (click)="openFeedbackModal()">
-    <ion-icon slot="end" name="chatbox-outline"></ion-icon>
+    <ion-icon color="primary"slot="end" name="chatbox-outline"></ion-icon>
     <ion-text> Hymn Feedback</ion-text>
   </ion-item>
   <!-- <ion-item (click)="addToFavorites()">
@@ -8,7 +8,7 @@
     <ion-text>Favorite</ion-text>
   </ion-item> -->
   <ion-item (click)="shareHymn()">
-    <ion-icon slot="end" name="share"></ion-icon>
+    <ion-icon color="primary"slot="end" name="share"></ion-icon>
     <ion-text>Share Hymn</ion-text>
   </ion-item>
 </ion-list>
